hphp/hack/test/typecheck/func_ptr_in_constants/meth_caller.php.exp
File "meth_caller.php", line 10, characters 45-75:
Expected constant expression for initializer (Parsing[1002])
File "meth_caller.php", line 14, characters 42-72:
Expected constant expression for initializer (Parsing[1002])
File "meth_caller.php", line 14, characters 42-72:
Illegal constant value (Naming[2023])
